<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arene01"
    android:padding="32dp"
    tools:context=".controller.CombatActivity">

    <TextView
        android:id="@+id/joueur1_vitalite"
        style="@style/vitalite"
        android:text="@string/vitalite_joueur1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/joueur2_vitalite"
        style="@style/vitalite"
        android:text="@string/vitalite_joueur2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/joueur_choix_attaque"
        style="@style/texteExplicatif"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nom_joueur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joueur1_vitalite" />

    <TextView
        android:id="@+id/texte_choix_attaque"
        style="@style/texteExplicatif"
        android:layout_height="wrap_content"
        android:text="@string/choisir_attaque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joueur_choix_attaque" />

    <Button
        android:id="@+id/attaque_basique"
        style="@style/boutonCombat"
        android:layout_marginTop="150dp"
        android:text="@string/attaque_basique"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texte_choix_attaque" />

    <Button
        android:id="@+id/attaque_speciale"
        style="@style/boutonCombat"
        android:layout_marginTop="50dp"
        android:text="@string/attaque_special"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/attaque_basique"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/attaque_basique"
        app:layout_constraintTop_toBottomOf="@+id/attaque_basique"
        app:layout_constraintVertical_bias="0.507" />

</androidx.constraintlayout.widget.ConstraintLayout>