<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/principal"
    android:padding="32dp"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/nom_application"
        style="@style/nomApplication"
        android:layout_width="402dp"
        android:layout_height="181dp"
        android:text="@string/nom_app"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/action_joueur"
        style="@style/texteExplicatif"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/nom_joueur"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom_application" />

    <TextView
        android:id="@+id/action_a_faire"
        style="@style/texteExplicatif"
        android:layout_height="0dp"
        android:text="@string/cree_ton_personnage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_joueur" />

    <Button
        android:id="@+id/joueur_1"
        style="@style/boutonPersonnage"
        android:layout_marginTop="32dp"
        android:text="@string/joueur1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_a_faire" />

    <Button
        android:id="@+id/joueur_2"
        style="@style/boutonPersonnage"
        android:layout_marginTop="32dp"
        android:text="@string/joueur2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/joueur_1"
        app:layout_constraintStart_toStartOf="@+id/joueur_1"
        app:layout_constraintTop_toBottomOf="@+id/joueur_1" />

    <Button
        android:id="@+id/bouton_demarrer"
        style="@style/boutonCombat"
        android:text="@string/lancer_partie"
        android:textSize="16sp"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joueur_2" />

</androidx.constraintlayout.widget.ConstraintLayout>